src/main/java/com/example/authpoo/error/NotFoundException.java
package com.example.authpoo.error;

public class NotFoundException extends RuntimeException{
    public NotFoundException(String message){
        super(message);
    }
}
